k8s/namespace-definitation.yaml
apiVersion: v1
kind: Namespace
metadata: 
    name: dev
    labels:
    	space-name: test
