k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comingsoon-page
  namespace: comingsoon
spec:
  selector:
    app: comingsoon-page
  
  type: NodePort
  ports:
  - portocol: TCP
    port: 80
    targetPort: 80
